--- a/portfolio.css
+++ b/portfolio.css
@@ -47,30 +47,33 @@ h2 {
     font-size: 42;
     background: pink;
 }
+
 .menu {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
+    list-style: none;
+    font-family: cursive;
+    float: right;
+    top: 10px;
+    right: 30px;
+    cursor: pointer;
+    color: black;
 }
+
+.menu a {
+    color: black !important;
+}
+
 
 .link {
-/* Make the menu items float left*/
- float: left; 
+    color: crimson;
+    display: inline;
+    padding-top: 5px;
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-bottom: 5px;
 }
 
-.link a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-
-.link a:hover {
-  background-color: #111;
+.link:hover {
+    background-color: beige;
 }
 
 #My work a {
@@ -102,26 +105,6 @@ img {
 }
 
 img:hover {
-    transform: scale(0.9);
+    /*Give transform property to scale to 0.9*/
+    transform: 0.9;
 }
-
-#contact
-{
-background: firebrick;
-}
-
-#contact iframe
-{
-    width: 100%;
-}
-
-.contact_1 h3
-{
-    display: inline;
-}
-.contact_1 a
-{
-    color: white;
-    text-shadow: none;
-}
-
